[tool.poetry]
name = "meltano-demo"
version = "0.1.0"
description = ""
authors = ["Mayra Valdes <4valdes@gmail.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "~3.11"
meltano = "3.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
